--- a/config.toml
+++ b/config.toml
@@ -81,7 +81,7 @@ subtitle = "这里是 HITsz LUG 周报，记录每周 LUG 奇闻异录。"
 # avatarEmail = "code@lednerb.de"
 
 # set an path to the image file you want to use | overwrites avatar by email
-customImage = "https://raw.githubusercontent.com/hitszlug/hitsz-lug-stickers/penguin/dist/%5Blogo%5D-meta.svg"
+customImage = "/assets/logo.svg"
 
 # define the icon you want to use for the overlay for the customImage or avatar.
 overlayIcon = "fa-home"
