--- a/.github/workflows/picture-generate.yml
+++ b/.github/workflows/picture-generate.yml
@@ -13,6 +13,11 @@ jobs:
       uses: actions/checkout@v3
       with:
         submodules: 'true'
+    - name: Setup Hugo
+      uses: peaceiris/actions-hugo@v2
+      with:
+        hugo-version: 'latest'
+        extended: true
     - name: Start hugo serve in background
       run: hugo serve &
     - name: Install Playwright
