fix install-deps for playwright webkit

--- a/.github/workflows/picture-generate.yml
+++ b/.github/workflows/picture-generate.yml
@@ -21,7 +21,9 @@ jobs:
     - name: Start hugo serve in background
       run: hugo serve &
     - name: Install Playwright
-      run: npx playwright install
+      run: |
+        npx playwright install
+        npx playwright install-deps
     - name: Get last change and screenshot
       run: |
         export changed=$(git log --name-only -1 content/article/ | tail -n 1 | sed 's+content/\(article/.*\).md+http://127.0.0.1:1313/\1/+g')
