Add user agent judge for hide-content

--- a/.github/workflows/picture-generate.yml
+++ b/.github/workflows/picture-generate.yml
@@ -29,9 +29,12 @@ jobs:
     - name: Get last change and screenshot
       run: |
         export changed=$(git log --name-only -1 content/article/ | tail -n 1 | sed 's+content/\(article/.*\).md+http://127.0.0.1:1313/\1/+g')
-        npx playwright screenshot --device="iPhone 13" --viewport-size="400,400" --full-page --user-agent="PicBot" $changed changed.png
+        npx playwright screenshot --device="iPhone 13" --viewport-size="400,400" --full-page $changed changed.png
+        npx playwright screenshot --device="iPhone 13" --viewport-size="400,400" --full-page --user-agent="hide-content" $changed changed-hide-content.png
     - name: Upload screenshot
       uses: actions/upload-artifact@v3
       with:
         name: screenshot-macos
-        path: changed.png
+        path: |
+          changed.png
+          changed-hide-content.png
