--- a/config.toml
+++ b/config.toml
@@ -87,7 +87,7 @@ customImage = "/assets/logo.svg"
 overlayIcon = "fa-home"
 
 # always display the top navigation (with pages and search) on non-mobile screens
-permanentTopNav = false
+permanentTopNav = true
 
 # always display the top navigation when scrolling
 # works only with permanentTopNav = true
