feat: markup.goldmark.renderer.unsafe = true

--- a/config.toml
+++ b/config.toml
@@ -181,7 +181,7 @@ defaultMarkdownHandler = 'goldmark'
 [markup.goldmark]
 [markup.goldmark.renderer]
 # Change to 'true' if you need to render raw HTML within your markdown content
-unsafe = false
+unsafe = true
 
 [markup.tableOfContents]
 endLevel = 5
